fix all tests and add new WebClient