@@ -10,6 +10,7 @@ import com.github.artemlv.ewm.event.model.dto.EventDto;
 import com.github.artemlv.ewm.event.model.dto.UpdateEventDto;
 import com.github.artemlv.ewm.event.storage.EventStorage;
 import com.github.artemlv.ewm.exception.type.ConflictException;
+import com.github.artemlv.ewm.exception.type.NotFoundException;
 import com.github.artemlv.ewm.location.model.Location;
 import com.github.artemlv.ewm.location.service.LocationService;
 import com.github.artemlv.ewm.request.model.Request;
@@ -30,12 +31,15 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
+import ru.yandex.practicum.SearchStats;
+import ru.yandex.practicum.client.StatsClient;
+import ru.yandex.practicum.dto.CreateStatsDto;
+import ru.yandex.practicum.dto.StatCountHitsDto;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static com.github.artemlv.ewm.event.model.QEvent.event;
 
@@ -52,64 +56,48 @@ public class EventServiceImpl implements EventService {
     private final CategoryStorage categoryStorage;
     private final LocationService locationService;
     private final RequestStorage requestStorage;
+    private final StatsClient statsClient;
 
     @Override
     public List<EventDto> getAllByAdmin(final AdminParameter adminParameter) {
-        return eventStorage.findAll(getSpecification(adminParameter),
-                        PageRequest.of(adminParameter.getFrom() / adminParameter.getSize(),
-                                adminParameter.getSize())).stream()
+        final List<Event> lists = eventStorage.findAll(getSpecification(adminParameter),
+                PageRequest.of(adminParameter.getFrom() / adminParameter.getSize(),
+                        adminParameter.getSize()));
+
+        lists.forEach(event -> updateStats(event, adminParameter.getRangeStart(), adminParameter.getRangeEnd(), true));
+
+        return lists.stream()
                 .map(event -> cs.convert(event, EventDto.class))
                 .toList();
     }
 
-    private Event getDifference(Event eventInStorage, final UpdateEventDto updateEventDto) {
-        Event event = cs.convert(updateEventDto, Event.class);
-        event.setCategory(eventInStorage.getCategory());
-        event.setConfirmedRequests(eventInStorage.getConfirmedRequests());
-        event.setCreatedOn(eventInStorage.getCreatedOn());
-        event.setPublishedOn(eventInStorage.getPublishedOn());
-        event.setState(eventInStorage.getState());
-        event.setViews(eventInStorage.getViews());
-        event.setInitiator(eventInStorage.getInitiator());
-        event.setLocation(eventInStorage.getLocation());
+    private Event update(Event eventInStorage, final UpdateEventDto updateEventDto) {
 
-        if (ObjectUtils.isEmpty(updateEventDto.participantLimit())) {
-            event.setParticipantLimit(eventInStorage.getParticipantLimit());
-        } else {
-            event.setParticipantLimit(updateEventDto.participantLimit());
+        if (!ObjectUtils.isEmpty(updateEventDto.participantLimit())) {
+            eventInStorage.setParticipantLimit(updateEventDto.participantLimit());
         }
 
-        if (ObjectUtils.isEmpty(updateEventDto.stateAction())) {
-            event.setState(eventInStorage.getState());
+        if (!ObjectUtils.isEmpty(updateEventDto.paid())) {
+            eventInStorage.setPaid(updateEventDto.paid());
         }
 
-        if (ObjectUtils.isEmpty(event.getTitle())) {
-            event.setTitle(eventInStorage.getTitle());
+        if (!ObjectUtils.isEmpty(updateEventDto.annotation())) {
+            eventInStorage.setAnnotation(updateEventDto.annotation());
         }
 
-        if (ObjectUtils.isEmpty(event.getAnnotation())) {
-            event.setAnnotation(eventInStorage.getAnnotation());
+        if (!ObjectUtils.isEmpty(updateEventDto.description())) {
+            eventInStorage.setDescription(updateEventDto.description());
         }
 
-        if (ObjectUtils.isEmpty(updateEventDto.paid())) {
-            event.setPaid(eventInStorage.isPaid());
-        } else {
-            event.setPaid(updateEventDto.paid());
-        }
-
-        if (ObjectUtils.isEmpty(event.getDescription())) {
-            event.setDescription(eventInStorage.getDescription());
-        }
-
-        if (ObjectUtils.isEmpty(event.getEventDate())) {
-            event.setEventDate(eventInStorage.getEventDate());
+        if (!ObjectUtils.isEmpty(updateEventDto.title())) {
+            eventInStorage.setTitle(updateEventDto.title());
         }
 
         if (updateEventDto.category() != 0) {
             eventInStorage.setCategory(categoryStorage.getByIdOrElseThrow(updateEventDto.category()));
         }
 
-        return event;
+        return eventInStorage;
     }
 
     @Override
@@ -119,11 +107,8 @@ public class EventServiceImpl implements EventService {
         if (!ObjectUtils.isEmpty(updateEventDto.stateAction())) {
             switch (updateEventDto.stateAction()) {
                 case REJECT_EVENT -> {
-                    if (eventInStorage.getState() == State.PUBLISHED) {
-                        throw new ConflictException("An event can only be rejected if it has not yet been published");
-                    }
-
-                    eventInStorage.setParticipantLimit(0);
+                    checkEventIsPublished(eventInStorage.getState());
+//                    eventInStorage.setParticipantLimit(0);
                     eventInStorage.setState(State.CANCELED);
                 }
 
@@ -131,6 +116,11 @@ public class EventServiceImpl implements EventService {
                     if (eventInStorage.getState() != State.PENDING) {
                         throw new ConflictException("An event can only be published if it is in a pending publication state");
                     }
+                    if (LocalDateTime.now().plusHours(1).isAfter(eventInStorage.getEventDate())) {
+                        throw new ConflictException("The start date of the event being modified must be no earlier "
+                                + "than an hour before from date of publication");
+                    }
+
                     eventInStorage.setState(State.PUBLISHED);
                     eventInStorage.setPublishedOn(LocalDateTime.now());
                 }
@@ -143,7 +133,7 @@ public class EventServiceImpl implements EventService {
             );
         }
 
-        return cs.convert(getDifference(eventInStorage, updateEventDto), EventDto.class);
+        return cs.convert(eventStorage.save(update(eventInStorage, updateEventDto)), EventDto.class);
     }
 
     @Override
@@ -194,6 +184,12 @@ public class EventServiceImpl implements EventService {
                                                                                UpdateRequestByIdsDto update) {
         List<Request> requests = requestStorage.findAllByIdInAndEventId(update.requestIds(), eventId);
 
+        if (ObjectUtils.isEmpty(requests)) {
+            throw new NotFoundException("No requests found for event id " + eventId);
+        }
+
+        int countRequest = requestStorage.countByEventIdAndStatus(eventId, State.CONFIRMED);
+
         RequestStatusUpdateResultDto result = RequestStatusUpdateResultDto.builder()
                 .confirmedRequests(new ArrayList<>())
                 .rejectedRequests(new ArrayList<>())
@@ -201,40 +197,37 @@ public class EventServiceImpl implements EventService {
 
         List<Request> requestsForSave = new ArrayList<>();
 
-        requests.forEach(request -> {
-                    if (request.getStatus() != State.PENDING) {
-                        throw new ConflictException(
-                                "The status can only be changed for applications that are in a pending state"
-                        );
-                    }
+        for (Request request : requests) {
+            if (request.getStatus() != State.PENDING) {
+                throw new ConflictException(
+                        "The status can only be changed for applications that are in a pending state"
+                );
+            }
 
-                    long countRequest = requestStorage.countByEventIdAndStatus(eventId, State.CONFIRMED);
+            Event event = request.getEvent();
 
-                    Event event = request.getEvent();
+            if (countRequest >= event.getParticipantLimit()) {
+                throw new ConflictException("The limit on applications for this event has been reached");
+            }
 
-                    if (countRequest >= event.getParticipantLimit()) {
-                        throw new ConflictException("The limit on applications for this event has been reached");
-                    }
+            if (event.getParticipantLimit() != 0 && event.isRequestModeration()) {
+                request.setStatus(update.status());
 
-                    if (event.getParticipantLimit() != 0 && event.isRequestModeration()) {
-                        request.setStatus(update.status());
-
-                        if (countRequest + 1L == event.getParticipantLimit()) {
-                            request.setStatus(State.CANCELED);
-                        }
-
-                        requestsForSave.add(request);
-
-                        if (update.status() == State.CONFIRMED) {
-                            result.confirmedRequests().add(cs.convert(request, RequestDto.class));
-                        }
-
-                        if (update.status() == State.REJECTED) {
-                            result.rejectedRequests().add(cs.convert(request, RequestDto.class));
-                        }
-                    }
+                if (countRequest++ == event.getParticipantLimit()) {
+                    request.setStatus(State.CANCELED);
                 }
-        );
+
+                requestsForSave.add(request);
+
+                if (update.status() == State.CONFIRMED) {
+                    result.confirmedRequests().add(cs.convert(request, RequestDto.class));
+                }
+
+                if (update.status() == State.REJECTED) {
+                    result.rejectedRequests().add(cs.convert(request, RequestDto.class));
+                }
+            }
+        }
 
         if (!requestsForSave.isEmpty()) {
             requestStorage.saveAll(requestsForSave);
@@ -247,14 +240,13 @@ public class EventServiceImpl implements EventService {
     public EventDto getById(final long eventId, final HttpServletRequest request) {
         Event event = eventStorage.getByIdOrElseThrow(eventId);
 
-/*        if (event.getState() != State.PUBLISHED) {
+        if (event.getState() != State.PUBLISHED) {
             throw new NotFoundException(SIMPLE_NAME, eventId);
-        }*/
+        }
 
         addStats(request);
 
-        event.setViews(event.getViews() + 1);
-
+        updateStats(event, LocalDateTime.now().minusDays(3), LocalDateTime.now().plusDays(3), true);
         return cs.convert(eventStorage.save(event), EventDto.class);
     }
 
@@ -273,14 +265,7 @@ public class EventServiceImpl implements EventService {
             predicate = predicate.and(event.paid.eq(publicParameter.getPaid()));
         }
 
-        if (!ObjectUtils.isEmpty(publicParameter.getRangeStart()) && !ObjectUtils.isEmpty(publicParameter.getRangeEnd())) {
-            predicate = predicate.and(event.createdOn.between(publicParameter.getRangeStart(),
-                    publicParameter.getRangeEnd()));
-        } else if (!ObjectUtils.isEmpty(publicParameter.getRangeStart())) {
-            predicate = predicate.and(event.createdOn.after(publicParameter.getRangeStart()));
-        } else if (!ObjectUtils.isEmpty(publicParameter.getRangeEnd())) {
-            predicate = predicate.and(event.createdOn.before(publicParameter.getRangeEnd()));
-        }
+        predicate = predicate.and(event.createdOn.between(publicParameter.getRangeStart(), publicParameter.getRangeEnd()));
 
         addStats(request);
 
@@ -289,7 +274,7 @@ public class EventServiceImpl implements EventService {
                         publicParameter.getSize())
         );
 
-        lists.forEach(event -> event.setViews(event.getViews() + 1));
+        lists.forEach(event -> updateStats(event, publicParameter.getRangeStart(), publicParameter.getRangeEnd(), false));
 
         eventStorage.saveAll(lists);
 
@@ -310,12 +295,14 @@ public class EventServiceImpl implements EventService {
 
         return events.stream()
                 .map(event -> cs.convert(event, EventDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public EventDto updateByUser(final long userId, final long eventId, final UpdateEventDto updateEventDto) {
         Event eventInStorage = eventStorage.getByIdOrElseThrow(eventId);
+
+        checkEventIsPublished(eventInStorage.getState());
 
         if (eventInStorage.getInitiator().getId() != userId) {
             throw new ConflictException("The initiator does not belong to this event");
@@ -329,12 +316,39 @@ public class EventServiceImpl implements EventService {
             }
         }
 
-        return cs.convert(getDifference(eventInStorage, updateEventDto), EventDto.class);
+        return cs.convert(eventStorage.save(update(eventInStorage, updateEventDto)), EventDto.class);
     }
 
     private void addStats(final HttpServletRequest request) {
-        //Необходимо положить статистику
+        statsClient.save(CreateStatsDto.builder()
+                .app("ewm")
+                .ip(request.getRemoteAddr())
+                .uri(request.getRequestURI())
+                .timestamp(LocalDateTime.now())
+                .build()
+        );
+    }
 
+    private void updateStats(Event event, final LocalDateTime startRange, final LocalDateTime endRange,
+                             final boolean unique) {
+
+        List<StatCountHitsDto> stats = statsClient.get(SearchStats.builder()
+                .start(startRange)
+                .end(endRange)
+                .uris(List.of("/events/" + event.getId()))
+                .unique(unique)
+                .build()
+        );
+        long views = 0L;
+
+        for (StatCountHitsDto stat : stats) {
+            views += stat.hits();
+        }
+
+        int confirmedRequests = requestStorage.countByEventIdAndStatus(event.getId(), State.CONFIRMED);
+
+        event.setViews(views);
+        event.setConfirmedRequests(confirmedRequests);
     }
 
     private void checkIfTheUserIsTheEventCreator(final long userId, final long eventId) {
@@ -396,15 +410,14 @@ public class EventServiceImpl implements EventService {
             predicate = predicate.and(event.category.id.in(adminParameter.getCategories()));
         }
 
-        if (!ObjectUtils.isEmpty(adminParameter.getRangeStart()) && !ObjectUtils.isEmpty(adminParameter.getRangeEnd())) {
-            predicate = predicate.and(event.createdOn.between(adminParameter.getRangeStart(),
-                    adminParameter.getRangeEnd()));
-        } else if (!ObjectUtils.isEmpty(adminParameter.getRangeStart())) {
-            predicate = predicate.and(event.createdOn.after(adminParameter.getRangeStart()));
-        } else if (!ObjectUtils.isEmpty(adminParameter.getRangeEnd())) {
-            predicate = predicate.and(event.createdOn.before(adminParameter.getRangeEnd()));
-        }
+        predicate = predicate.and(event.createdOn.between(adminParameter.getRangeStart(), adminParameter.getRangeEnd()));
 
         return predicate;
+    }
+
+    private void checkEventIsPublished(final State state) {
+        if (state == State.PUBLISHED) {
+            throw new ConflictException("An event can only be rejected if it has not yet been published");
+        }
     }
 }
